--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -88,7 +88,7 @@
     .view-row {
       margin: 0.625rem 0 0 0; // 10px 0 0 0
       // 버튼 목록
-      .btn-list { margin-top: 1.875rem; } // 30px
+      .z-button-list { margin-top: 1.875rem; } // 30px
     }
     // 제목
     &-title {
