--- a/src/main/resources/public/template/certification/status.html
+++ b/src/main/resources/public/template/certification/status.html
@@ -31,12 +31,12 @@
                 <th:block sec:authorize="isAnonymous()">
                     <h3 th:utext="#{login.label.requiredLogin}"></h3>
                     <form th:action="@{/logout}" method="post">
-                        <button type="submit" class="point-fill" th:text="#{login.btn.login}"></button>
+                        <button type="submit" class="z-button primary" th:text="#{login.btn.login}"></button>
                     </form>
                 </th:block>
                 <th:block sec:authorize="isAuthenticated()">
                     <h3></h3>
-                    <a class="btn point-fill authentication-email" href="/tokens/search" th:text="#{login.label.gotoMainPage}"></a>
+                    <a class="z-button primary authentication-email" href="/tokens/search" th:text="#{login.label.gotoMainPage}"></a>
                 </th:block>
             </th:block>
             <!-- 이미 인증완료된 후 로그인 시도 -->
@@ -45,12 +45,12 @@
                 <th:block sec:authorize="isAnonymous()">
                     <h3 th:utext="#{login.label.requiredLogin}"></h3>
                     <form th:action="@{/logout}" method="post">
-                        <button type="submit" class="point-fill" th:text="#{login.btn.login}"></button>
+                        <button type="submit" class="z-button primary" th:text="#{login.btn.login}"></button>
                     </form>
                 </th:block>
                 <th:block sec:authorize="isAuthenticated()">
                     <h3></h3>
-                    <a class="btn point-fill authentication-email" href="/tokens/search" th:text="#{login.label.gotoMainPage}"></a>
+                    <a class="z-button primary authentication-email" href="/tokens/search" th:text="#{login.label.gotoMainPage}"></a>
                 </th:block>
             </th:block>
             <!-- 인증 만료시 -->
@@ -62,7 +62,7 @@
                 <th:block sec:authorize="isAuthenticated()">
                     <h3 th:utext="#{authentication.msg.beforeEmailCheckDescription}"></h3>
                     <form id="sendForm" method="get" onsubmit="return false">
-                        <button type="submit" id="btnSend" class="point-fill authentication-email" th:text="#{authentication.label.recallAuthentication}"></button>
+                        <button type="submit" id="btnSend" class="z-button primary authentication-email" th:text="#{authentication.label.recallAuthentication}"></button>
                     </form>
                 </th:block>
                 <th:block sec:authorize="isAnonymous()">
