--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -23,7 +23,7 @@
                     <input type="hidden" id="typeId" th:value="${ciData?.typeId}" />
                     <input type="text" id="typeName" class="z-input col-pct-12 inherit" th:value="${ciData?.typeName}" readonly  required="true"
                            data-validation-required="true" th:attr="data-validation-required-name=#{cmdb.ci.label.type}"/>
-                    <button class="default-line" id="typeSelectBtn" type="button"  th:text="#{common.btn.select}"></button>
+                    <button class="z-button form" id="typeSelectBtn" type="button"  th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- 아이콘 -->
@@ -65,7 +65,7 @@
                 <div class="flex-row input-button">
                     <input type="hidden" id="classId" th:value="${ciData?.classId}"/>
                     <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="true" th:attr="data-validation-required-name=#{cmdb.type.label.class}"/>
-                    <button class="default-line" type="button" th:onclick="CI.openSelectClassModal([[${ciData?.classId}]]);" th:text="#{common.btn.select}"></button>
+                    <button class="z-button form" type="button" th:onclick="CI.openSelectClassModal([[${ciData?.classId}]]);" th:text="#{common.btn.select}"></button>
                 </div>-->
             </div>
             <!-- CI 태그 -->
