--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -69,8 +69,8 @@
                 <div class="edit-row flex-column">
                     <div class="under-bar">
                         <label th:text="#{code.label.codeLang}"></label>
-                        <button type="button" class="default-line plus float-right" onclick="drawCodeLang()">
-                            <span class="icon-plus"></span>
+                        <button type="button" class="z-button-icon extra float-right" onclick="drawCodeLang()">
+                            <span class="z-icon i-plus"></span>
                         </button>
                     </div>
                     <div id="codeLang"></div>
