--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="itsm-popup-btn-content flex-row view-row justify-content-end">
-            <div class="itsm-popup-btn-list">
+            <div class="itsm-popup-button-list">
                 <button class="z-button primary" type="button" th:text="#{common.btn.add}"  onclick="customCodeDataSave();"></button>
                 <button class="z-button secondary" type="button" th:text="#{common.btn.cancel}" onclick="window.close();"></button>
             </div>
