--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -46,8 +46,8 @@
                     <div class="edit-row flex-column">
                         <div class="under-bar">
                             <label th:text="#{pattern.label.pattern}" class="required"></label>
-                            <button type="button" class="default-line plus float-right" onclick="addPattern()">
-                                <span class="icon-plus"></span>
+                            <button type="button" class="z-button-icon extra float-right" onclick="addPattern()">
+                                <span class="z-icon i-plus"></span>
                             </button>
                         </div>
                     </div>
