--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -35,9 +35,9 @@
                 </div>
             </div>
             <div class="thumbnail-modal-buttons">
-                <div class="btn-list">
-                    <button class="default-line" th:text="#{common.btn.select}" onclick="selectedImageSave();"></button>
-                    <button class="default-line" th:text="#{common.btn.close}" onclick="window.close();"></button>
+                <div class="z-button-list">
+                    <button class="z-button primary" th:text="#{common.btn.select}" onclick="selectedImageSave();"></button>
+                    <button class="z-button secondary" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
             </div>
         </div>
