--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -63,8 +63,8 @@
             </div>
         </div>
         <div class="related-add justify-content-center align-items-center">
-            <button th:onclick="openRelatedToken([[${tokenId}]])">
-                <span class="icon-plus"></span>
+            <button class="z-button-icon form" th:onclick="openRelatedToken([[${tokenId}]])">
+                <span class="z-icon i-plus"></span>
             </button>
         </div>
     </div>
