--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -73,8 +73,8 @@
                         <label id="conditionLabel">
                             <span th:text="#{customCode.label.condition}"></span>
                         </label>
-                        <button type="button" class="default-line plus float-right" disabled>
-                            <span class="icon-plus"></span>
+                        <button type="button" class="z-button-icon float-right" disabled>
+                            <span class="z-icon i-plus"></span>
                         </button>
                     </div>
                     <div id="condition"></div>
