--- a/src/main/resources/public/template/formDesigner/formEditPreview.html
+++ b/src/main/resources/public/template/formDesigner/formEditPreview.html
@@ -25,7 +25,7 @@
         <div class="document-container">
             <div class="document-main flex-column align-items-center preview">
                 <div class="document-main-header flex-row justify-content-end align-items-center">
-                    <button class="default-fill" th:text="#{common.btn.close}" onclick="window.close();"></button>
+                    <button class="z-button secondary" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
                 <div class="drawing-board" id="document-panel" data-readonly="true" data-display="preview"></div>
             </div>
